--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@google/genai": "^1.19.0",
+    "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^1.8.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
